discussion/kv_engine/155194/155194_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Use the global executor from the core

Move the tasks over to use the global executor

Change-Id: I33cd997a2a79544ab799af9321ca4a8cb208c711

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-09 12:43:50.000000000
Message: 
Uploaded patch set 17.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-09 12:44:04.000000000
Message: 
Removed reviewer Build Bot.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 13:45:30.000000000
Message: 
Patch Set 17: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8271/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/daemon/protocol/mcbp/cluster_config_executor.cc b/daemon/protocol/mcbp/cluster_config_executor.cc
index 6e121beb6..2a81f21c3 100644
--- a/daemon/protocol/mcbp/cluster_config_executor.cc
+++ b/daemon/protocol/mcbp/cluster_config_executor.cc
@@ -1,4 +1,4 @@
-    /*
+/*
  *     Copyright 2017-Present Couchbase, Inc.
  *
  *   Use of this software is governed by the Business Source License included

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8271/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9673/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9673/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9673/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36635/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/211/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31308/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11398/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11250/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11669/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10322/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19254/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-09 14:48:42.000000000
Message: 
Patch Set 17:

(1 comment)
Line:1, daemon/protocol/mcbp/cluster_config_executor.cc -> will fix

----------------------------------------------------------------------------------------------------------------------
